# lexalytics-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yaml
backend/alembic/: env.py
backend/alembic/versions/: 2025-09-18-01-31_8afd3c1918f5.py  2025-09-18-03-07_5820629a8fca.py  2025-09-18-06-37_6e98ea019f34.py  2025-09-26-22-46_dceed42a1237.py  2025-09-26-22-51_9207274da52d.py  2025-09-26-22-58_f51eb5f74aa8.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/routers/: __init__.py  comment.py  draft.py  login.py  upload-comments.py
backend/app/controllers/: comment.py  draft.py
backend/app/core/: config.py  jwt.py
backend/app/crud/: base_crud.py  comment_crud.py  draft_crud.py  user_crud.py
backend/app/db/: database.py
backend/app/models/: __init__.py  base_model.py  comment_model.py  draft_model.py  user_model.py
backend/app/models/enums/: enums.py
backend/app/prompts/: draft_summary.md  sentiment_analysis.md
backend/app/schemas/: comment_schema.py  draft_schema.py  user_schema.py
backend/app/utils/: agent.py  report_generator.py
