[project]
name = "sih-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.1",
    "pydantic[email]>=2.11.9",
    "pydantic-ai>=1.0.6",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
    "asyncpg>=0.30.0",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "bcrypt>=4.3.0",
]
